--- a/src/FunctionalRestoApp/FunctionalItemBox.css
+++ b/src/FunctionalRestoApp/FunctionalItemBox.css
@@ -2,7 +2,7 @@
     width: calc(100% /3);
     display: flex;
     flex-direction: row;
-    border: 1px solid black;
+    border: 1px solid white;
     padding: 25px;
 }
 
